log
mi., 16 de mar. de 2022 23:45:33: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
800a208
ju., 17 de mar. de 2022  0:02:09: 
 list.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
428673b
ju., 17 de mar. de 2022  0:06:40: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
75f11ec
ju., 17 de mar. de 2022  0:13:25: 
 list.c | 14 +++++---------
 1 file changed, 5 insertions(+), 9 deletions(-)
 tests:  0|0
06ff7d6
ju., 17 de mar. de 2022 21:42:20: 
 list.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
96d4f5b
vi., 18 de mar. de 2022 20:32:26: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:84:5: error: unknown type name 'node'
     node* m=createNode(data);
     ^~~~
list.c:84:13: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     node* m=createNode(data);
             ^~~~~~~~~~
list.c:86:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         list->head=m;
                   ^
list.c:89:13: error: 'List {aka struct List}' has no member named 'last'
         list->last->next;
             ^~
list.c:91:9: error: 'List {aka struct List}' has no member named 'last'
     list->last=m;
         ^~
cc1.exe: all warnings being treated as errors
Compilation failed
55e2463
vi., 18 de mar. de 2022 20:40:22: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:84:5: error: unknown type name 'node'
     node* m=createNode(data);
     ^~~~
list.c:84:13: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     node* m=createNode(data);
             ^~~~~~~~~~
list.c:86:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         list->head=m;
                   ^
list.c:89:19: error: statement with no effect [-Werror=unused-value]
         list->head->next;
         ~~~~~~~~~~^~~~~~
list.c:91:15: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     list->head=m;
               ^
cc1.exe: all warnings being treated as errors
Compilation failed
8a51299
